<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:padding="10dp">
    <EditText android:id="@+id/insertName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:padding="5dp"
              android:layout_marginTop="30dp"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
              android:textColorHint="@color/gray"
    android:textSize="28dp"/>
    <EditText android:id="@+id/insertEmail"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/emailInsert"
              android:padding="5dp"
              android:layout_marginTop="10dp"
              android:inputType="textEmailAddress"
              android:textColor="@color/gray"
              android:textSize="28dp"/>
    <EditText android:id="@+id/insertEndereco"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enderecoInsert"
              android:padding="5dp"
              android:layout_marginTop="10dp"
              android:inputType="textPostalAddress"
              android:textColor="@color/gray"
              android:textSize="28dp"/>
    <EditText android:id="@+id/insertTelefoneComercial"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/telefonecomercialInsert"
              android:padding="5dp"
              android:layout_marginTop="10dp"
              android:inputType="phone"
              android:textColor="@color/gray"
              android:textSize="28dp"/>
    <EditText android:id="@+id/insertTelefoneResidencial"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/telefoneresidencialinsert"
              android:padding="5dp"
              android:layout_marginTop="10dp"
              android:inputType="phone"
              android:textColor="@color/gray"
              android:textSize="28dp"/>



</LinearLayout>